# assetman

./: .gitignore  Cargo.toml  README.md  env.nix  install.sh
assetman/: Cargo.toml
assetman-api/: Cargo.toml
assetman-api/src/: holdings.rs  lib.rs  price.rs
assetman/migrations/2019-04-08-074724_base_asset_prices/: down.sql  up.sql
assetman/migrations/2019-08-07-175753_alphavantage/: up.sql
assetman/migrations/2020-07-31_new_base/: down.sql  up.sql
assetman/src/: lib.rs  main.rs  plugins.rs  schema.rs
migrations/2019-04-08-074724_base_asset_prices/: up.sql
plugins/assetman-bitcoin-holdings/: Cargo.toml  README.md
plugins/assetman-bitcoin-holdings/src/: main.rs
plugins/assetman-bitstamp-price/: Cargo.toml  README.md
plugins/assetman-bitstamp-price/src/: main.rs
plugins/assetman-csv-scan/: Cargo.toml  README.md
plugins/assetman-csv-scan/src/: main.rs
plugins/assetman-metal-price/: Cargo.toml  README.md
plugins/assetman-metal-price/src/: main.rs
plugins/assetman-static/: Cargo.toml  README.md
plugins/assetman-static-holdings/: Cargo.toml
plugins/assetman-static-holdings/src/: main.rs
plugins/assetman-static-price/: Cargo.toml
plugins/assetman-static-price/src/: main.rs
plugins/assetman-static/src/: main.rs
src/: alphav.rs  lib.rs  main.rs  quandl.rs  schema.rs
src/plugins/: holdings.rs  mod.rs
