[package]
name = "assetman"
version = "0.1.0"
authors = ["Sebastian Geisler <sebastian@blockstream.io>"]
edition = "2018"

[dependencies]
assetman-api = { path = "../assetman-api" }
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
prettytable-rs = "0.8.0"
regex = "1.3.9"
reqwest = "0.9.19"
serde = "1.0.114"
serde_json = "1.0.57"
structopt = "0.2.15"
terminal_size = "0.1.8"