[package]
name = "assetman-bitcoin-holdings"
version = "0.1.0"
authors = ["Sebastian Geisler <github@gnet.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assetman-api = { path = "../../assetman-api" }
dotenv = "0.15.0"
electrum-client = { git = "https://github.com/sgeisler/rust-electrum-client", branch = "assetman", features = ["aggregation"] }
log = "0.4.11"
miniscript = "4"
pretty_env_logger = "0.4.0"
serde = "1.0.114"
serde_json = "1.0.57"
