[package]
name = "assetman-static"
version = "0.1.0"
authors = ["Sebastian Geisler <github@gnet.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assetman-api = { path = "../../assetman-api" }
serde = "1.0.114"
serde_json = "1.0.57"